# mlrecipes

./: LICENSE  README.md  pyproject.toml
src/mlrecipes/: __about__.py  models.py  orchestrator.py
tests/: __init__.py
